--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -42,7 +42,7 @@
                 <div class="text-center text-white">
                     <img src="../assets/logoAnimated.gif" alt="Zamazon" width="300" 
                     height="190"/>
-                    <p class="lead fw-normal text-white-50 mb-0"><img src="../assets/Ilustración_sin_título.png" alt="Zamazon" width="800" 
+                    <p class="lead fw-normal text-white-50 mb-0"><img src="../assets/subtitle.png" alt="Zamazon" width="800" 
                         height="90"/></p>
                 </div>
             </div>
