--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -156,6 +156,11 @@ p {
   margin-top: 0;
   margin-bottom: 1rem;
 }
+.checked {
+  color: orange;
+}
+
+
 
 abbr[title],
 abbr[data-bs-original-title] {
